# paper_keyboard

./: CMakeLists.txt  EnhancedWindow.h  GUI.hpp  Key.cpp  Key.h  PKBKey.cpp  PKBKey.h  PaperKeyboard.cpp  PaperKeyboard.h  PaperKeyboard.hpp  QR.cpp  QR.h  SystemInteraction.hpp  main  main.cpp  pkbkey.hpp  start.sh  utils.cpp  utils.h  utils.hpp
arduino/src/: main.cpp
